--- a/Places/Base.lproj/Main.storyboard
+++ b/Places/Base.lproj/Main.storyboard
@@ -19,18 +19,57 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cKV-9G-Mc7">
                                 <rect key="frame" x="15" y="20" width="291" height="528"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" none="YES" button="YES" image="YES"/>
+                                </accessibility>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Lv-N1-Jy0">
+                                <rect key="frame" x="14" y="20" width="291" height="528"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" none="YES" button="YES" image="YES"/>
+                                </accessibility>
+                            </imageView>
+                            <webView opaque="NO" alpha="0.0" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="37G-zr-8HP">
+                                <rect key="frame" x="15" y="20" width="291" height="528"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </webView>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hki-bj-9Sj">
+                                <rect key="frame" x="15" y="20" width="291" height="528"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="toggleDescription:" destination="hzS-jB-y9W" eventType="touchUpInside" id="RO5-vy-zs7"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.97826086960000003" green="0.91848131079999995" blue="0.73914263440000005" alpha="0.0" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="a4F-Wq-f2I" firstAttribute="top" secondItem="37G-zr-8HP" secondAttribute="bottom" id="2eA-fw-7Hd"/>
+                            <constraint firstItem="37G-zr-8HP" firstAttribute="top" secondItem="6LC-1I-4vP" secondAttribute="top" id="4tR-7Q-Qfo"/>
+                            <constraint firstItem="a4F-Wq-f2I" firstAttribute="top" secondItem="hki-bj-9Sj" secondAttribute="bottom" id="59M-sZ-hJt"/>
+                            <constraint firstItem="hki-bj-9Sj" firstAttribute="top" secondItem="6LC-1I-4vP" secondAttribute="top" id="B6r-tw-DzM"/>
+                            <constraint firstAttribute="trailing" secondItem="37G-zr-8HP" secondAttribute="trailing" id="BCU-6O-fOj"/>
+                            <constraint firstItem="hki-bj-9Sj" firstAttribute="leading" secondItem="gLe-Tb-ylt" secondAttribute="leading" id="DNB-Hd-Mkj"/>
                             <constraint firstItem="cKV-9G-Mc7" firstAttribute="leading" secondItem="gLe-Tb-ylt" secondAttribute="leading" id="GJv-Yf-MWB"/>
+                            <constraint firstItem="1Lv-N1-Jy0" firstAttribute="leading" secondItem="gLe-Tb-ylt" secondAttribute="leading" id="GOJ-7I-dQQ"/>
+                            <constraint firstAttribute="trailing" secondItem="1Lv-N1-Jy0" secondAttribute="trailing" id="Mf5-sz-dD0"/>
                             <constraint firstItem="cKV-9G-Mc7" firstAttribute="top" secondItem="6LC-1I-4vP" secondAttribute="top" id="Rtw-4L-jbo"/>
+                            <constraint firstItem="1Lv-N1-Jy0" firstAttribute="top" secondItem="6LC-1I-4vP" secondAttribute="top" id="aRc-pM-6Ih"/>
+                            <constraint firstItem="37G-zr-8HP" firstAttribute="leading" secondItem="gLe-Tb-ylt" secondAttribute="leading" id="bFw-dF-4fY"/>
                             <constraint firstAttribute="trailing" secondItem="cKV-9G-Mc7" secondAttribute="trailing" id="fJk-E0-pyp"/>
                             <constraint firstItem="a4F-Wq-f2I" firstAttribute="top" secondItem="cKV-9G-Mc7" secondAttribute="bottom" id="osF-5C-HdD"/>
+                            <constraint firstItem="a4F-Wq-f2I" firstAttribute="top" secondItem="1Lv-N1-Jy0" secondAttribute="bottom" id="u0K-qk-zlA"/>
+                            <constraint firstAttribute="trailing" secondItem="hki-bj-9Sj" secondAttribute="trailing" id="ya8-YH-UYx"/>
                         </constraints>
                     </view>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <connections>
+                        <outlet property="blurredImage" destination="1Lv-N1-Jy0" id="re5-Ul-MQR"/>
+                        <outlet property="description" destination="37G-zr-8HP" id="bM1-ti-3kD"/>
                         <outlet property="image" destination="cKV-9G-Mc7" id="ug3-Og-xiY"/>
                     </connections>
                 </viewController>
